# bytecraft

./: Cargo.toml  ChangeLog.md  LICENSE-APACHE  LICENSE-MIT  README.md
src/: common.rs  error.rs  lib.rs
src/reader/: mod.rs  peekable.rs  readable.rs
src/writer/: mod.rs  writable.rs
tests/: collections.rs  endian.rs  error.rs  reader.rs  writer.rs
