[package]
name = "bytecraft"
version = "0.2.3"
authors = ["Igor Glushatov <igor.743646@gmail.com>"]
edition = "2021"
rust-version = "1.80.0"
description = "A flexible and efficient library for reading and writing binary data in Rust."
documentation = "https://docs.rs/bytecraft"
repository = "https://github.com/Igor743646/bytecraft"
keywords = ["bytecraft", "byte", "reader", "writer", "serialization"]
categories = ["encoding"]
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = ["tests/*"]

[lib]
name = "bytecraft"
